--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,8 @@ publish = false
 tokio = { version = "0.2.22", features = ["macros", "process", "stream", "rt-threaded", "sync"] }
 futures = "0.3.5"
 # Logging
-env_logger = "0.6"
+fern = { version = "0.6.0", features = ["colored"] }
+chrono = "0.4.15"
 log = "0.4"
 # Config
 config = { version = "0.10.1", features = ["toml"] }
