--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "veloren_server_bot"
-version = "0.1.0"
+version = "0.1.2"
 authors = ["Songtronix <contact@songtronix.com>"]
 edition = "2018"
 publish = false
@@ -21,3 +21,5 @@ toml = "0.5.6"
 anyhow = "1.0.32"
 # Discord
 serenity = { version = "0.9.0-rc.1", features = ["cache", "framework", "standard_framework", "rustls_backend"] }
+# Other
+lazy_static = "1.4.0"
