feat: customizable (veloren) repository url

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -6,7 +6,9 @@ on:
   pull_request:
     branches-ignore:
       - "master"
-    types: [push, pull_request]
+  push:
+    branches-ignore:
+      - "master"
 
 jobs:
   test:
